fixed scrollbar and styling

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -98,9 +98,59 @@
 
 .border-right {
   border-right: 2px solid silver;
-  height: fit-content;
+  height: 70vh !important;
+}
+
+.fit_size{
+  max-height: 90vh;
+}
+
+.verticalBar{
+  border-left: 1px solid silver;
+  height: 70vh;
 }
 
 .addFields:first-child{
   /* width:5rem; */
+}
+
+
+/* ------------------------------------------- */
+table.scrolldown {
+  width: 100%;
+  height: 340px;
+}
+
+/* To display the block as level element */
+table.scrolldown tbody, table.scrolldown thead {
+  display: block;
+} 
+
+
+table.scrolldown tbody {
+  height: 300px; 
+  overflow-y: auto;
+  overflow-x: hidden; 
+  
+}
+
+table.scrolldown tbody::-webkit-scrollbar {
+  width: 5px;
+  z-index: -1;
+}
+ 
+table.scrolldown tbody::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+table.scrolldown tbody::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+tbody td, thead th {
+  width : 200px;
+}
+td,th {
+  text-align:center;
 }
